# curllm

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.test  INSTRUKCJA.md  Makefile  QUICKSTART.sh  README.md  REFACTORING_PLAN.md  TODO.md  bql_parser.py  curllm  curllm-smart  curllm_server.py  curllm_web.py  curlx  docker-compose.test.yml  docker-compose.yml  examples.py  examples_streamware.py  hardcoded_report.json  hardcoded_report.txt  install.sh  migration_plan.md  products.html  project.functions.toon  pyproject.toml  requirements.txt  restart.sh  run-20251128-185810.md  run-20251129-104938.md  start-web-full.sh  test.json  tree.sh  web_prompts.json  wordpress.md  wordpress_batch.py
TODO/: README.md  curllm-praktyczne-przyklady.md  curllm-scenariusze-biznesowe.md  curllm-status-projektu.md  curllm-wskazowki-dla-llm.md
bql/: __init__.py  __main__.py  examples.py
captcha/: CAPTCHA_SOLUTION_README.md  allegro_captcha_solver.py  captcha_solver.py  playwright_bql_framework.py
curllm_core/: __init__.py  actions.py  agent_factory.py  atomic_functions.py  atomic_query.py  bql.py  bql_extraction_orchestrator.py  bql_utils.py  browser_setup.py  browserless.py  captcha.py  captcha_slider.py  captcha_widget.py  cli_orchestrator.py  command_parser.py  config.py  config_logger.py  context_optimizer.py  data_export.py  diagnostics.py  dom_helpers.py  dom_statistics.py  dom_utils.py  dynamic_container_detector.py  dynamic_detector.py  error_handler.py  executor.py  extraction.py  extraction_orchestrator.py  extraction_orchestrator.py.bak  feedback.py  form_detector.py  form_fill.py  form_fill_llm.py  goal_detector_llm.py  headers.py  hierarchical_planner.py  human_verify.py  hybrid_selector_ranker.py  instruction_parser.py  (+58 more)
curllm_logs/: __init__.py  log_config.py  log_entry.py  log_session.py  log_writer.py  run_logger.py  screenshots.py
curllm_server/: __init__.py  __main__.py  app.py  config.py
curllm_web/: __init__.py  __main__.py  app.py  config.py  main.py
curlx_pkg/: Makefile  README.md  pyproject.toml
curlx_pkg/src/curlx/: __init__.py  cli.py
curlx_pkg/tests/: test_cli.py
curlx_pkg/tests/e2e/: Dockerfile  docker-compose.yml  test_compose.sh  test_e2e.sh
docs/: API.md  ARCHITECTURE.md  ATOMIC_QUERY_SYSTEM.md  CLI_COMMANDS.md  COMPONENTS.md  DIFFING.md  DYNAMIC_DETECTION.md  Devbox.md  Docker.md  EXAMPLES.md  Environment.md  FORM_FILLING.md  GUIDELINES.md  HARDCODED_PATTERNS.md  HIERARCHICAL_PLANNER.md  IMPROVEMENTS.md  INTELLIGENT_SUCCESS_EVALUATION.md  ITERATIVE_EXTRACTOR.md  Installation.md  LLM_DSL_ARCHITECTURE.md  LLM_DSL_QUICK_REFERENCE.md  LLM_DSL_URL_RESOLUTION.md  LLM_GUIDED_FORM_FILLING.md  MIGRATION_V2.md  Playwright_BQL.md  README.md  REFACTORING_COMPLEX_QUERIES.md  REFACTORING_PLAN.md  REFACTORING_TODO.md  REMOTE_PROXY_TUTORIAL.md  TODO_DETAILED.md  Troubleshooting.md  update_nav.sh
dsl/: README.md  ceneo_products.yaml  knowledge.db  prototypowanie_form.yaml  www.ceneo.pl_extract_products_49a3a505.yaml  www.soselectronic.com_extract_specs_c8e3f821.yaml
examples/: README.md  atomic_query_example.py  bql_contact_form.py  bql_wp_login.py  curl_contact_form.sh  curl_product_search.sh  curl_wp_login.sh  curllm-extract-links.sh  curllm_contact_form.sh  curllm_wp_login.sh  orchestrator_example.py  php_api_example.php  setup_env.sh  streamware_examples.py  v2_usage.py
extension/: README.md  curllm_BROWSER_EXTENSION_PLAN.md  extension.js  ui-components.html
flows/: README.md  decision_tree_debug.yaml  example_bql.yaml  example_browse.yaml  example_extraction.yaml  example_form_fill.yaml  example_http_pipeline.yaml  example_multi_site.yaml  example_scraping_pipeline.yaml  example_screenshot.yaml  form_fill_modular.yaml
forms/: Dockerfile  Makefile  README.md  __init__.py  app.py  docker-compose.yml
functions/: README.md  __init__.py  generator.py  registry.py
monitoring/: .env.example  EXAMPLES.md  Makefile  README.md  send_email.py  url.csv  url.sample.csv  website_monitor.sh
output/: filtered_products.csv  filtered_products.json  filtered_products.md  products.csv  products.json  products.jsonl  products.md  products.xml
pricing/: .env.example  Dockerfile  Makefile  README.md  __init__.py  app.py  docker-compose.yml  requirements.txt  url.txt
scripts/: analyze_dependencies.py  analyze_deps.py  atomize_module.py  bootstrap.sh  code_quality.py  dependency_report.json  dev_watcher.py  find_hardcoded.py  fix_missing_loggers.py  refactor_to_llm_dsl.py  reorganize_versions.py  setup.sh  start.sh  status.sh  stop.sh
tests/: e2e.sh  e2e_diff.sh  test_algorithm_patterns.py  test_bql_pkg.py  test_cli_commands.py  test_context_optimizer.py  test_currency.py  test_dom_toolkit.py  test_dsl.py  test_error_handler.py  test_executor_bql.py  test_extraction_smoke.py  test_filter_specs.py  test_form_components.py  test_form_fill_integration.py  test_functions.py  test_health.py  test_hierarchical_bypass.py  test_human_verify.py  test_llm_config.py  test_rate_limiter.py  test_result_corrector.py  test_result_store.py  test_retry.py  test_runtime_headers.py  test_safety.py  test_screenshot_organization.py  test_streamware.py  test_tool_retry.py  test_v2_imports.py  (+1 more)
(+542 files in other folders)
