[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curllm"
version = "1.0.23"
description = "Browser Automation with Local LLM (8GB GPU compatible)"
readme = "README.md"
authors = [
  { name = "Tom Sapletta" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["llm", "browser", "automation", "scraping", "ollama", "playwright"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Framework :: Flask",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "flask",
  "flask-cors",
  "aiohttp",
  "playwright",
  "langchain-ollama",
  "pillow",
  "opencv-python",
  "pytesseract",
  "numpy",
  "websockets",
  "requests",
  "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/wronai/curllm"
Issues = "https://github.com/wronai/curllm/issues"

[project.scripts]
curllm-setup = "curllm_core.cli.setup:main"
curllm-doctor = "curllm_core.cli.doctor:main"

[tool.setuptools]
# Install non-Python CLI script and top-level modules
script-files = ["curllm"]
py-modules = ["curllm_server", "bql_parser"]

[tool.setuptools.packages.find]
include = ["curllm_core*"]
