[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curllm"
version = "1.0.40"
description = "Browser Automation with Local LLM (8GB GPU compatible)"
readme = "README.md"
authors = [
  { name = "Tom Sapletta" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["llm", "browser", "automation", "scraping", "ollama", "playwright"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Framework :: Flask",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "flask",
  "flask-cors",
  "aiohttp",
  "playwright",
  "langchain-ollama",
  "litellm>=1.0.0",
  "pillow",
  "opencv-python",
  "pytesseract",
  "numpy",
  "websockets",
  "requests",
  "python-dotenv",
  "psutil",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/wronai/curllm"
Issues = "https://github.com/wronai/curllm/issues"

[project.scripts]
curllm-setup = "curllm_core.cli.setup:main"
curllm-doctor = "curllm_core.cli.doctor:main"
curllm-web = "curllm_core.cli.web:main"
curllm-flow = "curllm_core.cli.flow:main"
curllm-feedback = "curllm_core.cli.feedback:main"

[tool.setuptools]
# Install non-Python CLI script and top-level modules
script-files = ["curllm"]
py-modules = ["curllm_server", "bql_parser", "curllm_web"]

[tool.setuptools.packages.find]
include = ["curllm_core*", "curllm_logs*", "functions*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow running",
]
